--- a/docker/spark/Dockerfile
+++ b/docker/spark/Dockerfile
@@ -1,7 +1,7 @@
 FROM bitnami/spark:3.5.0
 
 USER root
-RUN apt-get update && apt-get install -y python3-pip && echo     pip3 install --upgrade pip
+RUN apt-get update && apt-get install -y python3-pip && pip3 install --upgrade pip
 
 COPY requirements.txt .
 COPY scripts ./scripts
