--- a/docker/spark/Dockerfile
+++ b/docker/spark/Dockerfile
@@ -1,4 +1,4 @@
-FROM bitnami/spark:3.5.0
+FROM apache/spark-py:3.5.0
 
 USER root
 RUN apt-get update && apt-get install -y python3-pip && pip3 install --upgrade pip
@@ -8,8 +8,8 @@ COPY scripts ./scripts
 RUN pip3 install -r requirements.txt
 
 # Cassandra & Kafka connectors
-RUN wget -q https://repo1.maven.org/maven2/com/datastax/spark/spark-cassandra-connector-assembly_2.12/3.5.0/spark-cassandra-connector-assembly_2.12-3.5.0.jar -P /opt/bitnami/spark/jars/
-RUN wget -q https://repo1.maven.org/maven2/org/apache/spark/spark-sql-kafka-0-10_2.12/3.5.0/spark-sql-kafka-0-10_2.12-3.5.0.jar -P /opt/bitnami/spark/jars/
+RUN wget -q https://repo1.maven.org/maven2/com/datastax/spark/spark-cassandra-connector-assembly_2.12/3.5.0/spark-cassandra-connector-assembly_2.12-3.5.0.jar -P /opt/spark/jars/
+RUN wget -q https://repo1.maven.org/maven2/org/apache/spark/spark-sql-kafka-0-10_2.12/3.5.0/spark-sql-kafka-0-10_2.12-3.5.0.jar -P /opt/spark/jars/
 
 COPY start-master.sh /start-master.sh
 COPY start-worker.sh /start-worker.sh
