--- a/docker/spark/Dockerfile
+++ b/docker/spark/Dockerfile
@@ -1,18 +1,35 @@
-FROM bitnami/spark:latest
+FROM openjdk:11-jre-slim
 
 USER root
-RUN apt-get update && apt-get install -y python3-pip && pip3 install --upgrade pip
+ENV SPARK_VERSION=3.3.0
+ENV HADOOP_VERSION=3
+ENV SPARK_HOME=/opt/spark
+ENV PATH=$PATH:${SPARK_HOME}/bin:${SPARK_HOME}/sbin
+ENV PYSPARK_PYTHON=python3
 
+# Install dependencies
+RUN apt-get update && apt-get install -y \
+    wget \
+    curl \
+    python3 \
+    python3-pip \
+    && pip3 install --upgrade pip \
+    && rm -rf /var/lib/apt/lists/*
+
+# Download and install Spark
+RUN wget -q https://archive.apache.org/dist/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz \
+    && tar -xzf spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz \
+    && mv spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION} ${SPARK_HOME} \
+    && rm spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz
+
+# Install Python dependencies
 COPY requirements.txt .
 COPY scripts ./scripts
 RUN pip3 install -r requirements.txt
 
-# Cassandra & Kafka connectors - use latest compatible versions
-# Get Spark version dynamically or use latest stable connector versions
-RUN wget -q https://repo1.maven.org/maven2/com/datastax/spark/spark-cassandra-connector-assembly_2.12/3.4.0/spark-cassandra-connector-assembly_2.12-3.4.0.jar -P /opt/bitnami/spark/jars/ || \
-    wget -q https://repo1.maven.org/maven2/com/datastax/spark/spark-cassandra-connector-assembly_2.12/3.3.0/spark-cassandra-connector-assembly_2.12-3.3.0.jar -P /opt/bitnami/spark/jars/
-RUN wget -q https://repo1.maven.org/maven2/org/apache/spark/spark-sql-kafka-0-10_2.12/3.4.0/spark-sql-kafka-0-10_2.12-3.4.0.jar -P /opt/bitnami/spark/jars/ || \
-    wget -q https://repo1.maven.org/maven2/org/apache/spark/spark-sql-kafka-0-10_2.12/3.3.0/spark-sql-kafka-0-10_2.12-3.3.0.jar -P /opt/bitnami/spark/jars/
+# Cassandra & Kafka connectors for Spark 3.3.0
+RUN wget -q https://repo1.maven.org/maven2/com/datastax/spark/spark-cassandra-connector-assembly_2.12/3.3.0/spark-cassandra-connector-assembly_2.12-3.3.0.jar -P ${SPARK_HOME}/jars/
+RUN wget -q https://repo1.maven.org/maven2/org/apache/spark/spark-sql-kafka-0-10_2.12/3.3.0/spark-sql-kafka-0-10_2.12-3.3.0.jar -P ${SPARK_HOME}/jars/
 
 COPY start-master.sh /start-master.sh
 COPY start-worker.sh /start-worker.sh
