--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,14 +41,14 @@ services:
       - ./model:/model
 
   zookeeper:
-    image: confluentinc/cp-zookeeper:latest
+    image: confluentinc/cp-zookeeper:6.2.1
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
     ports:
       - "2181:2181"
 
   kafka:
-    image: confluentinc/cp-kafka:latest
+    image: confluentinc/cp-kafka:6.2.1
     depends_on:
       - zookeeper
     ports:
