Update network interface for capture service in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,7 +73,7 @@ services:
     depends_on:
       - kafka
     environment:
-      - INTERFACE=eth0
+      - INTERFACE=enp0s25
       - KAFKA_BROKERS=kafka:9092
       - TOPIC=netflow-data
 
