--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,10 @@ services:
     ports:
       - "8080:8080"
       - "7077:7077"
+    volumes:
+      - ./scripts:/scripts
+      - ./data:/data
+      - ./model:/model
 
   spark-worker:
     build:
