--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
       - "9042:9042"
     environment:
       - CASSANDRA_AUTO_BOOTSTRAP=false
+      - CASSANDRA_LISTEN_ADDRESS=0.0.0.0
+      - CASSANDRA_RPC_ADDRESS=0.0.0.0
+      - CASSANDRA_BROADCAST_ADDRESS=cassandra
+      - CASSANDRA_SEEDS=cassandra
     volumes:
       - cassandra-data:/var/lib/cassandra
       - ./docker/cassandra/init.cql:/init.cql
