--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3.8'
 
+networks:
+  bigdata:
+
+
 services:
   cassandra:
     image: cassandra:4.1
@@ -20,7 +24,18 @@ services:
     volumes:
       - cassandra-data:/var/lib/cassandra
       - ./docker/cassandra/init.cql:/init.cql
-    command: cassandra -f -R
+    
+    command: >
+        bash -c "
+        cassandra -f -R &
+        echo 'Waiting for Cassandra to start...'
+        sleep 30
+        cqlsh -f /init.cql
+        fg %1
+        "
+    networks:
+      - bigdata
+
 
 
   spark-master:
@@ -35,6 +50,12 @@ services:
       - ./scripts:/scripts
       - ./data:/data
       - ./model:/model
+    environment:
+      - SPARK_MASTER_HOST=spark-master
+      - SPARK_MASTER_PORT=7077
+    networks:
+      - bigdata
+
 
   spark-worker:
     build:
@@ -43,6 +64,10 @@ services:
     command: /start-worker.sh spark://spark-master:7077
     depends_on:
       - spark-master
+    environment:
+      - SPARK_WORKER_HOST=spark-worker
+    networks:
+      - bigdata
 
   spark-submit:
     build:
@@ -56,6 +81,8 @@ services:
       - ./scripts:/scripts
       - ./data:/data
       - ./model:/model
+    networks:
+      - bigdata
 
   zookeeper:
     image: confluentinc/cp-zookeeper:6.2.1
@@ -63,6 +90,8 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
     ports:
       - "2181:2181"
+    networks:
+      - bigdata
 
   kafka:
     image: confluentinc/cp-kafka:6.2.1
@@ -75,6 +104,8 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:
+      - bigdata
 
 
 
@@ -93,6 +124,8 @@ services:
       - INTERFACE=enp0s25
       - KAFKA_BROKERS=kafka:9092
       - TOPIC=netflow-data
+    networks:
+      - bigdata
 
 volumes:
   cassandra-data:
