--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,7 +113,7 @@ services:
     build:
       context: ./docker/capture
     privileged: true
-    network_mode: host
+    #network_mode: host
     volumes:
       - ./data/pcap:/pcap
       - ./data/flows:/flows
