--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,10 @@
 version: '3.8'
 
+networks:
+  default:
+    name: bigdata-net
+    driver: bridge
+
 services:
   cassandra:
     image: cassandra:4.1
@@ -21,6 +26,8 @@ services:
       - cassandra-data:/var/lib/cassandra
       - ./docker/cassandra/init.cql:/init.cql
     command: cassandra -f -R
+    networks:
+      - default
 
 
   spark-master:
@@ -35,6 +42,8 @@ services:
       - ./scripts:/scripts
       - ./data:/data
       - ./model:/model
+    networks:
+      - default
 
   spark-worker:
     build:
@@ -43,6 +52,8 @@ services:
     command: /start-worker.sh spark://spark-master:7077
     depends_on:
       - spark-master
+    networks:
+      - default
 
   spark-submit:
     build:
@@ -56,6 +67,8 @@ services:
       - ./scripts:/scripts
       - ./data:/data
       - ./model:/model
+    networks:
+      - default
 
   zookeeper:
     image: confluentinc/cp-zookeeper:6.2.1
@@ -63,6 +76,8 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
     ports:
       - "2181:2181"
+    networks:
+      - default
 
   kafka:
     image: confluentinc/cp-kafka:6.2.1
@@ -75,6 +90,8 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:
+      - default
 
 
 
@@ -82,7 +99,7 @@ services:
     build:
       context: ./docker/capture
     privileged: true
-    network_mode: host
+    #network_mode: host
     volumes:
       - ./data/pcap:/pcap
       - ./data/flows:/flows
@@ -93,6 +110,8 @@ services:
       - INTERFACE=enp0s25
       - KAFKA_BROKERS=kafka:9092
       - TOPIC=netflow-data
+    networks:
+      - default
 
 volumes:
   cassandra-data:
